@@ -15,14 +15,22 @@
  */
 package com.github.tomakehurst.wiremock.verification;
 
-import static com.github.tomakehurst.wiremock.client.WireMock.*;
+import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
+import static com.github.tomakehurst.wiremock.client.WireMock.containing;
+import static com.github.tomakehurst.wiremock.client.WireMock.equalTo;
+import static com.github.tomakehurst.wiremock.client.WireMock.equalToJson;
+import static com.github.tomakehurst.wiremock.client.WireMock.get;
+import static com.github.tomakehurst.wiremock.client.WireMock.matching;
+import static com.github.tomakehurst.wiremock.client.WireMock.matchingJsonPath;
+import static com.github.tomakehurst.wiremock.client.WireMock.ok;
+import static com.github.tomakehurst.wiremock.client.WireMock.post;
+import static com.github.tomakehurst.wiremock.client.WireMock.urlEqualTo;
 import static com.github.tomakehurst.wiremock.http.RequestMethod.DELETE;
 import static com.github.tomakehurst.wiremock.http.RequestMethod.POST;
 import static com.github.tomakehurst.wiremock.http.RequestMethod.PUT;
 import static com.github.tomakehurst.wiremock.matching.MockRequest.mockRequest;
 import static com.github.tomakehurst.wiremock.matching.RequestPatternBuilder.newRequestPattern;
 import static com.github.tomakehurst.wiremock.verification.NearMissCalculator.NEAR_MISS_COUNT;
-import static com.google.common.collect.FluentIterable.from;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.is;
 import static org.mockito.Mockito.mock;
@@ -31,8 +39,11 @@ import static org.mockito.Mockito.when;
 import com.github.tomakehurst.wiremock.client.MappingBuilder;
 import com.github.tomakehurst.wiremock.http.Request;
 import com.github.tomakehurst.wiremock.http.ResponseDefinition;
-import com.github.tomakehurst.wiremock.stubbing.*;
-import com.google.common.base.Function;
+import com.github.tomakehurst.wiremock.stubbing.InMemoryScenarios;
+import com.github.tomakehurst.wiremock.stubbing.Scenarios;
+import com.github.tomakehurst.wiremock.stubbing.ServeEvent;
+import com.github.tomakehurst.wiremock.stubbing.StubMapping;
+import com.github.tomakehurst.wiremock.stubbing.StubMappings;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -157,15 +168,8 @@ public class NearMissCalculatorTest {
 
   private void givenStubMappings(final MappingBuilder... mappingBuilders) {
     final List<StubMapping> mappings =
-        from(mappingBuilders)
-            .transform(
-                new Function<MappingBuilder, StubMapping>() {
-                  @Override
-                  public StubMapping apply(MappingBuilder input) {
-                    return input.build();
-                  }
-                })
-            .toList();
+        Arrays.stream(mappingBuilders).map(MappingBuilder::build).collect(Collectors.toList());
+
     when(stubMappings.getAll()).thenReturn(mappings);
   }
 
@@ -176,16 +180,6 @@ public class NearMissCalculatorTest {
                 request ->
                     ServeEvent.of(LoggedRequest.createFrom(request), new ResponseDefinition()))
             .collect(Collectors.toList());
-    //        from(requests)
-    //            .transform(
-    //                new Function<Request, ServeEvent>() {
-    //                  @Override
-    //                  public ServeEvent apply(Request request) {
-    //                    return ServeEvent.of(
-    //                        LoggedRequest.createFrom(request), new ResponseDefinition());
-    //                  }
-    //                })
-    //            .toList();
 
     when(requestJournal.getAllServeEvents()).thenReturn(serveEvents);
   }
